minor: performance improvements from FindBugs
git-svn-id: http://code.open-bio.org/repos/biojava/biojava-live/trunk@8042 7c6358e6-4a41-0410-a743-a5b2a554c398